# Tu-Solucion

./: .gitignore  PUNTOS_CLAVE_DEFENSA.md  README.md  README_DEFENSA_ORAL.md  README_USUARIOS.md  cargar_provincias_barrios.py  django-stubs.pyi  env.example  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup_users.py  usuarios_admin_credenciales.txt  usuarios_sistema.txt
Database/: tu_solucion.sql
catering/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py  views_admin.py  views_clientes.py  views_responsables.py  views_trabajadores.py
catering/fixtures/: datos_iniciales.json
catering/management/commands/: crear_usuario.py  crear_usuarios_iniciales.py  test_crear_evento.py  test_registro_final.py
catering/migrations/: 0001_initial.py  0002_alter_servicio_options_and_more.py  0003_cliente_usuario_eventosolicitado_precio_por_persona_and_more.py  0004_provincia_eventosolicitado_fecha_sena_and_more.py  0005_personal_usuario.py
catering/templatetags/: catering_extras.py
docs/: er.mmd
docs/uml/: README.md  class_diagram.mmd  reserva_sequence.mmd  use_case_diagram.mmd
static/css/: emergency.css  landing-page.css  modern-style.css  style.css
static/js/: main.js
templates/: base.html
templates/catering/: actualizar_estado_servicio.html  admin_dashboard.html  asignar_personal.html  cambiar_estado_evento.html  cliente_confirm_delete.html  cliente_dashboard.html  cliente_detail.html  cliente_evento_detail.html  cliente_eventos.html  cliente_form.html  cliente_list.html  consulta_barrios.html  consulta_cumpleanos.html  consulta_financiera.html  crear_responsable.html  dashboard.html  editar_menu.html  eliminar_personal_asignado.html  empleado_dashboard.html  evento_confirm_delete.html  evento_detail.html  evento_form.html  evento_list.html  gestionar_sena.html  index.html  personal_confirm_delete.html  personal_detail.html  personal_form.html  personal_list.html  producto_confirm_delete.html  producto_detail.html  producto_form.html  productos_list.html  reserva_catering.html  responsable_asignar_personal.html  responsable_crear_evento.html  responsable_dashboard.html  responsable_editar_evento.html  responsable_eventos.html  tipo_producto_confirm_delete.html  (+5 more)
templates/registration/: logged_out.html  login.html  registro.html
tu_solucion/: asgi.py  settings.py  urls.py  wsgi.py
typings/: django-stubs.pyi
