[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieroli-catering"
version = "1.0.0"
description = "Sistema de gestión de catering"
authors = [
    {name = "Tu Nombre", email = "tu.email@ejemplo.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=4.2.0",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "mysqlclient",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pylint",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0621",  # redefined-outer-name
    "W0622",  # redefined-builtin
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "django.contrib.*",
    "django.db.*",
    "django.utils.*",
    "django.core.*",
    "django.http.*",
]
ignore_missing_imports = true
